--- a/WebdevFinal/app/views/home/index.html.erb
+++ b/WebdevFinal/app/views/home/index.html.erb
@@ -1,3 +1,111 @@
-<h1>Home#index</h1>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html dir="ltr" lang="en">
 
-<p>Find me in app/views/home/index.html.erb</p>
+<head>
+<meta charset="utf-8">
+
+<title>Welcome to Chicago Social Trolley</title>
+
+<link rel="stylesheet" href="bootstrap.css">
+<link rel="canonical" href="" />
+<style type="text/css">
+.main{text-align:right}
+h1{}
+h2{}
+h3{}
+p{}
+#registerbutton{}
+.footerclass{}
+body {
+background-image:url('chicago.jpg');
+background-repeat:no-repeat;
+background-position:0% 0%;
+}
+
+</style>
+<link href="images/favicon.ico" rel="shortcut icon">
+<link href="images/apple-touch-icon.png" rel="apple-touch-icon">
+<link href="images/apple-touch-icon-72x72.png" sizes="72x72" rel="apple-touch-icon">
+<link href="images/apple-touch-icon-114x114.png" sizes="114x114" rel="apple-touch-icon">
+</head>
+
+
+<body>
+
+<div class="container">
+<div class="hero-unit">
+<div class="row">
+
+<br>
+
+<img border="0" src="PartyCat.jpg" alt="TCP networks" width="250" height="200" /><br>
+<h5>We have plenty of new upcoming events</h5><br>
+
+
+</div>
+</div>
+</div>
+
+
+
+<table width="100%" border="0">
+<tbody>
+
+<tr valign="top">
+<td>
+
+
+<h2>Why Use Chicago Social Trolly?</h2><br>
+<ul>
+
+<li>Find new cool people to hangout and have fun with<br>
+
+</li>
+
+
+</ul>
+</td>
+
+<td>
+<h2>How to use the this service in 2 Steps</h2><br>
+<ol>
+<li>Log IN</li><br><br>
+<li>Add events</li>
+</ol>
+
+
+</li>
+</ol>
+
+</td>
+</tr>
+</tbody>
+</table>
+
+
+
+<footer>
+<div class="foot inline-list">
+
+<ul><table>
+
+<th>
+<a href="tcp_about.php">About</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+<span class="divider"> </span>
+</th>
+<th>
+Contact&nbspUs&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+<span class="divider"> </span>
+</th>
+<th>
+Feedback
+<span class="divider"> </span>
+</th></tr></table>
+
+</ul>
+</div>
+</footer>
+
+</body>
+</html>
+
