--- a/WebdevFinal/app/views/userdetails/edit.html.erb
+++ b/WebdevFinal/app/views/userdetails/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @userdetail %> |
-<%= link_to 'Back', userdetails_path %>
+<%= link_to 'Back', current_user %>
