--- a/WebdevFinal/app/views/events/index.html.erb
+++ b/WebdevFinal/app/views/events/index.html.erb
@@ -12,12 +12,12 @@
 
 <% @events.each do |event| %>
   <tr>
-    <td><%= event.name %></td>
+    <td><%= link_to event.name, event %></td>
     <td><%= event.time %></td>
     <td><%= event.description %></td>
-    <td><%= link_to 'Show', event %></td>
-    <td><%= link_to 'Edit', edit_event_path(event) %></td>
-    <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'UPDATE', edit_event_path(event) %></td>
+    <td><%= link_to 'JOIN', "/events/join/#{event.id}", method: 'post' %></td>
+    <td><%= link_to 'DELETE', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
