--- a/WebdevFinal/app/views/layouts/application.html.erb
+++ b/WebdevFinal/app/views/layouts/application.html.erb
@@ -7,17 +7,27 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav>
-    <%= link_to "Events", events_url %> |
-    <%= link_to "Groups", groups_url %> |
-    <%= link_to "Venues", venues_url %> |
-    <%= link_to "Users", users_url %> |
-  </nav>
 
+  <nav>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <%= link_to "Events", events_url %>  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <%= link_to "Groups", grups_url %>  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <%= link_to "Venues", venues_url %>  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <% if signed_in? %>
+    <%= link_to "My Details", current_user %>  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <%#= link_to "User Details", userdetails_url %>
+    <%= link_to "My Photos", photos_url %>  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <%= link_to "Join Event", user_events_url %>  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <%= link_to "Sign Out", session_url, method: 'delete' %></p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <% else %>
+    <%= link_to "Sign Up", new_user_url %> or <%= link_to "Sign In", new_session_url %>
+    <% end %>
+
+  </nav>
 
   <p><%= notice %></p>
 
   <%= yield %>
+
 
 </body>
 </html>
