--- a/WebdevFinal/app/views/photos/index.html.erb
+++ b/WebdevFinal/app/views/photos/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing photos</h1>
+<h1>Listing all your photos:</h1>
 
 <table>
   <tr>
@@ -13,6 +13,7 @@
   <tr>
     <td><%= photo.title %></td>
     <td><%= photo.location %></td>
+
     <td><%= link_to 'Show', photo %></td>
     <td><%= link_to 'Edit', edit_photo_path(photo) %></td>
     <td><%= link_to 'Destroy', photo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
