--- a/WebdevFinal/app/views/userdetails/_form.html.erb
+++ b/WebdevFinal/app/views/userdetails/_form.html.erb
@@ -31,7 +31,12 @@
     <%= f.label :otherinfo %><br />
     <%= f.text_field :otherinfo %>
   </div>
+
+    <div class="field">
+    <%= f.hidden_field :user_id %>
+  </div>
   <div class="actions">
+
     <%= f.submit %>
   </div>
 <% end %>
