--- a/WebdevFinal/app/views/userdetails/show.html.erb
+++ b/WebdevFinal/app/views/userdetails/show.html.erb
@@ -25,6 +25,5 @@
   <%= @userdetail.otherinfo %>
 </p>
 
-
 <%= link_to 'Edit', edit_userdetail_path(@userdetail) %> |
-<%= link_to 'Back', userdetails_path %>
+<%= link_to 'Back', current_user %>
