--- a/WebdevFinal/app/views/users/_form.html.erb
+++ b/WebdevFinal/app/views/users/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for(@user) do |f| %>
+
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -15,17 +16,17 @@
     <%= f.label :email %><br />
     <%= f.text_field :email %>
   </div>
+    <div class="field">
+    <%= f.label :username %><br />
+    <%= f.text_field :username %>
+  </div>
   <div class="field">
     <%= f.label :password %><br />
-    <%= f.password_field :password_digest %>
-<!--   </div>
+    <%= f.password_field :password %>
+ </div>
     <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation %>
-  </div> -->
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
   </div>
   <div class="actions">
     <%= f.submit %>
