--- a/WebdevFinal/app/views/users/show.html.erb
+++ b/WebdevFinal/app/views/users/show.html.erb
@@ -4,16 +4,10 @@
   <b>Email:</b>
   <%= @user.email %>
 </p>
-
-<p>
-  <b>Password digest:</b>
-  <%= @user.password_digest %>
-</p>
 <p>
   <b>Username:</b>
   <%= @user.username %>
 </p>
 
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Edit', edit_user_path(@user) %>
