--- a/WebdevFinal/app/views/venues/index.html.erb
+++ b/WebdevFinal/app/views/venues/index.html.erb
@@ -11,9 +11,8 @@
 
 <% @venues.each do |venue| %>
   <tr>
-    <td><%= venue.name %></td>
+    <td><%= link_to venue.name, venue %></td>
     <td><%= venue.address %></td>
-    <td><%= link_to 'Show', venue %></td>
     <td><%= link_to 'Edit', edit_venue_path(venue) %></td>
     <td><%= link_to 'Destroy', venue, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
@@ -22,4 +21,4 @@
 
 <br />
 
-<%= link_to 'New Venue', new_venue_path %>
+<%= link_to 'Create New Venue', new_venue_path %>
